# vaelix-app

./: .dockerignore  .gitignore  AGENTS.md  API_INTEGRATION_README.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.api  Makefile  README.md  capacitor.config.ts  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
.github/workflows/: beta-release.yml  build-android.yml  build-ios.yml  ci.yml  codeql.yml  release.yml
android/app/: build.gradle
api/: Cargo.toml  main.rs
api/migrations/: 20241022000000_initial_schema.sql
api/src/: main.rs
api/src/config/: app_config.rs  mod.rs
api/src/handlers/: accounts.rs  auth.rs  beneficiaries.rs  cards.rs  dashboard.rs  mod.rs  transactions.rs  users.rs
api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
api/src/models/: account.rs  api_key.rs  beneficiary.rs  card.rs  mod.rs  transaction.rs  user.rs
api/src/services/: account_service.rs  auth_service.rs  beneficiary_service.rs  card_service.rs  database.rs  encryption_service.rs  mod.rs  transaction_service.rs  user_service.rs
api/src/utils/: error.rs  jwt.rs  mod.rs  validation.rs
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(auth)/account/: page.tsx
app/(auth)/analytics/: page.tsx
app/(auth)/cards/: page.tsx
app/api-test/: page.tsx
app/lib/: api.ts  store.ts  useApi.ts  useWidgets.ts  utils.ts  wallet.ts  widgetTypes.ts
app/login/: page.tsx
app/signup/: page.tsx
components/ui/: bottom-nav.tsx  mobile-header.tsx  sidebar.tsx
lib/: icon.tsx  store.ts
(+37 files in other folders)
