[package]
name = "vaelix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "net"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
rust_decimal = { version = "1.0", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.0"
bcrypt = "0.15"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tower = { version = "0.4", features = ["limit"] }
regex = "1.10"
validator = { version = "0.16", features = ["derive"] }
